--- a/attendance.html
+++ b/attendance.html
@@ -60,6 +60,12 @@
             ring-color: #16a34a;
             border-color: #16a34a;
         }
+        .theme-bg-purple { background-color: #8b5cf6; } .theme-hover-bg-purple:hover { background-color: #7c3aed; }
+.theme-ring-purple:focus { ring-color: #8b5cf6; border-color: #8b5cf6; }
+Here is the complete `attendance.html` file with the new styles included for your convenience.
+
+
+http://googleusercontent.com/immersive_entry_chip/2
     </style>
 </head>
 
@@ -149,5 +155,6 @@
     <script src="app.js"></script>
 
 </body>
+
 
 </html>
