--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
       Section B
     </a>
     
-    <a href="attendance.html?section=C" 
+    <a href="attendance.html?section=CE" 
        class="px-6 py-4 text-lg font-semibold text-white bg-green-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-green-700 hover:-translate-y-1">
-      Section C
+      Section CE
     </a>
 
     <a href="attendance.html?section=AiR" 
