New Sections Added B.Tech AIML and M.Tech AIML

--- a/attendance.html
+++ b/attendance.html
@@ -62,10 +62,8 @@
         }
         .theme-bg-purple { background-color: #8b5cf6; } .theme-hover-bg-purple:hover { background-color: #7c3aed; }
 .theme-ring-purple:focus { ring-color: #8b5cf6; border-color: #8b5cf6; }
-Here is the complete `attendance.html` file with the new styles included for your convenience.
-
-
-http://googleusercontent.com/immersive_entry_chip/2
+/* Here is the complete `attendance.html` file with the new styles included for your convenience.
+http://googleusercontent.com/immersive_entry_chip/2 */
     </style>
 </head>
 
