--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </a>
     <a href="attendance.html?section=AiMlMt" 
        class="px-6 py-4 text-lg font-semibold text-white bg-teal-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-purple-700 hover:-translate-y-1">
-      M.Tech AIML
+      M.Tech CSE
     </a>
     <!-- ADD NEW CLASS HERE. href="attendance.html?section={Same as in data.js}" -->
 
