--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <a href="attendance.html?section=AiR" 
        class="px-6 py-4 text-lg font-semibold text-white bg-purple-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-purple-700 hover:-translate-y-1">
-      B.Tech AI&R
+      M.Tech AI&R
     </a>
     <a href="attendance.html?section=AiMlBt" 
        class="px-6 py-4 text-lg font-semibold text-white bg-blue-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-purple-700 hover:-translate-y-1">
