--- a/attendance.html
+++ b/attendance.html
@@ -68,6 +68,7 @@ http://googleusercontent.com/immersive_entry_chip/2 */
 </head>
 
 <body class="bg-gray-50">
+    <span class="fixed bottom-1 right-1 text-sm text-gray-500" id = "watermark"></span>
 
     <div class="container mx-auto p-4 md:p-8">
 
