--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         AI&R
       </a>
       <!-- ADD NEW CLASS HERE. href="attendance.html?section={Same as in data.js}" -->
-
+k
     </div>
     <h1 class="text-2xl font-bold text-gray-800 mb-4">M.Tech(FYIP)</h1>
     <div class="mt-5 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-5">
@@ -57,7 +57,7 @@
       </a>
       <a href="attendance.html?section=AiMlMt"
         class="px-6 py-4 text-lg font-semibold text-white bg-teal-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-teal-700 hover:-translate-y-1">
-        AIML
+        CSE
       </a>
     </div>
   </div>
