--- a/attendance.html
+++ b/attendance.html
@@ -8,67 +8,399 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            min-height: 100vh;
+            position: relative;
+            overflow-x: hidden;
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle at 20% 50%, rgba(102, 126, 234, 0.1) 0%, transparent 50%),
+                radial-gradient(circle at 80% 80%, rgba(118, 75, 162, 0.1) 0%, transparent 50%);
+            pointer-events: none;
+            z-index: 0;
+        }
+
+        .container {
+            position: relative;
+            z-index: 1;
+        }
+
+        header {
+            background: rgba(255, 255, 255, 0.95) !important;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1) !important;
+            border-radius: 20px !important;
+            border: 1px solid rgba(255, 255, 255, 0.2) !important;
+            animation: slideDown 0.6s ease-out;
+        }
+
+        @keyframes slideDown {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        #section-title {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+            font-weight: 700;
+            letter-spacing: -0.5px;
         }
 
         tr.absent {
-            background-color: #fef2f2;
+            background-color: rgba(254, 242, 242, 0.6);
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            border-left: 4px solid transparent;
         }
 
         tr.present {
-            background-color: #dcfce7;
+            background: linear-gradient(90deg, rgba(220, 252, 231, 0.8) 0%, rgba(220, 252, 231, 0.4) 100%);
             color: #166534;
             font-weight: 500;
+            border-left: 4px solid #16a34a;
+            box-shadow: inset 0 0 20px rgba(22, 163, 74, 0.1);
+        }
+
+        tr {
+            cursor: pointer;
+            position: relative;
+            overflow: hidden;
+        }
+
+        tr::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
+            transition: left 0.5s;
+        }
+
+        tr:hover::before {
+            left: 100%;
+        }
+
+        tr:hover {
+            transform: translateX(5px);
+        }
+
+        thead {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%) !important;
+        }
+
+        thead th {
+            color: white !important;
+            font-weight: 600 !important;
+            letter-spacing: 0.5px;
+            text-transform: uppercase;
+            font-size: 0.75rem;
+        }
+
+        main {
+            background: rgba(255, 255, 255, 0.95) !important;
+            backdrop-filter: blur(10px);
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15) !important;
+            border-radius: 20px !important;
+            border: 1px solid rgba(255, 255, 255, 0.2) !important;
+            animation: slideUp 0.6s ease-out 0.1s both;
+        }
+
+        @keyframes slideUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Stats Cards */
+        .grid>div {
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.95) 0%, rgba(255, 255, 255, 0.8) 100%) !important;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2) !important;
+            border-radius: 16px !important;
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.1) !important;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+            animation: scaleIn 0.6s ease-out both;
+        }
+
+        .grid>div:nth-child(1) {
+            animation-delay: 0.2s;
+        }
+
+        .grid>div:nth-child(2) {
+            animation-delay: 0.3s;
+        }
+
+        .grid>div:nth-child(3) {
+            animation-delay: 0.4s;
+        }
+
+        @keyframes scaleIn {
+            from {
+                opacity: 0;
+                transform: scale(0.9);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1);
+            }
+        }
+
+        .grid>div:hover {
+            transform: translateY(-8px);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.2) !important;
+        }
+
+        .grid>div p:first-child {
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            font-size: 0.875rem;
+        }
+
+        .grid>div p:last-child {
+            font-weight: 800;
+            font-size: 2.5rem;
+        }
+
+        /* Buttons */
+        button {
+            border-radius: 12px !important;
+            font-weight: 600 !important;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1) !important;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1) !important;
+            position: relative;
+            overflow: hidden;
+            border: none !important;
+        }
+
+        button::before {
+            content: '';
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            width: 0;
+            height: 0;
+            border-radius: 50%;
+            background: rgba(255, 255, 255, 0.3);
+            transform: translate(-50%, -50%);
+            transition: width 0.6s, height 0.6s;
+        }
+
+        button:hover::before {
+            width: 300px;
+            height: 300px;
+        }
+
+        button:hover {
+            transform: translateY(-3px);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.2) !important;
+        }
+
+        button:active {
+            transform: translateY(-1px);
+        }
+
+        #reset-btn {
+            background: linear-gradient(135deg, #6366f1 0%, #4f46e5 100%) !important;
+            color: white !important;
         }
 
         .theme-bg-blue {
-            background-color: #2563eb;
+            background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%) !important;
+            color: white !important;
         }
 
         .theme-hover-bg-blue:hover {
-            background-color: #1d4ed8;
+            background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%) !important;
         }
 
         .theme-ring-blue:focus {
-            ring-color: #2563eb;
-            border-color: #2563eb;
+            ring-color: #3b82f6 !important;
+            border-color: #3b82f6 !important;
         }
 
         .theme-bg-teal {
-            background-color: #0d9488;
+            background: linear-gradient(135deg, #14b8a6 0%, #0d9488 100%) !important;
+            color: white !important;
         }
 
         .theme-hover-bg-teal:hover {
-            background-color: #0f766e;
+            background: linear-gradient(135deg, #0d9488 0%, #0f766e 100%) !important;
         }
 
         .theme-ring-teal:focus {
-            ring-color: #0d9488;
-            border-color: #0d9488;
+            ring-color: #14b8a6 !important;
+            border-color: #14b8a6 !important;
         }
 
         .theme-bg-green {
-            background-color: #16a34a;
+            background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%) !important;
+            color: white !important;
         }
 
         .theme-hover-bg-green:hover {
-            background-color: #15803d;
+            background: linear-gradient(135deg, #16a34a 0%, #15803d 100%) !important;
         }
 
         .theme-ring-green:focus {
-            ring-color: #16a34a;
-            border-color: #16a34a;
+            ring-color: #22c55e !important;
+            border-color: #22c55e !important;
         }
-        .theme-bg-purple { background-color: #8b5cf6; } .theme-hover-bg-purple:hover { background-color: #7c3aed; }
-.theme-ring-purple:focus { ring-color: #8b5cf6; border-color: #8b5cf6; }
-/* Here is the complete `attendance.html` file with the new styles included for your convenience.
-http://googleusercontent.com/immersive_entry_chip/2 */
+
+        .theme-bg-purple {
+            background: linear-gradient(135deg, #a78bfa 0%, #8b5cf6 100%) !important;
+            color: white !important;
+        }
+
+        .theme-hover-bg-purple:hover {
+            background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%) !important;
+        }
+
+        .theme-ring-purple:focus {
+            ring-color: #a78bfa !important;
+            border-color: #a78bfa !important;
+        }
+
+        /* Input */
+        input {
+            border-radius: 12px !important;
+            border: 2px solid #e5e7eb !important;
+            transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1) !important;
+            font-weight: 500;
+        }
+
+        input:focus {
+            border-color: #667eea !important;
+            box-shadow: 0 0 0 3px rgba(102, 126, 234, 0.1) !important;
+            background: rgba(102, 126, 234, 0.02) !important;
+        }
+
+        /* Footer */
+        footer {
+            animation: slideUp 0.6s ease-out 0.2s both;
+        }
+
+        /* Modal */
+        #password-modal {
+            backdrop-filter: blur(5px);
+            background: rgba(0, 0, 0, 0.4) !important;
+        }
+
+        #password-modal>div {
+            background: linear-gradient(135deg, rgba(255, 255, 255, 0.98) 0%, rgba(255, 255, 255, 0.95) 100%) !important;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.3) !important;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3) !important;
+            border-radius: 20px !important;
+            animation: modalPop 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+        }
+
+        @keyframes modalPop {
+            from {
+                opacity: 0;
+                transform: scale(0.9) translateY(-20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: scale(1) translateY(0);
+            }
+        }
+
+        /* Watermark */
+        #watermark {
+            color: rgba(255, 255, 255, 0.5) !important;
+            font-size: 0.75rem;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
+
+        /* Smooth Page Transitions */
+        .container {
+            animation: pageLoad 0.8s ease-out;
+        }
+
+        @keyframes pageLoad {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        /* Scroll Animations */
+        @keyframes pulse {
+
+            0%,
+            100% {
+                opacity: 1;
+            }
+
+            50% {
+                opacity: 0.8;
+            }
+        }
+
+        table tbody tr:nth-child(odd) {
+            animation: tableRowFade 0.6s ease-out backwards;
+        }
+
+        @keyframes tableRowFade {
+            from {
+                opacity: 0;
+                transform: translateX(-10px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateX(0);
+            }
+        }
+
+        table tbody tr:nth-child(n) {
+            animation-delay: calc(0.02s * var(--row-index, 0));
+        }
     </style>
 </head>
 
 <body class="bg-gray-50">
-    <span class="fixed bottom-1 right-1 text-sm text-gray-500" id = "watermark"></span>
+    <span class="fixed bottom-1 right-1 text-sm text-gray-500" id="watermark"></span>
 
     <div class="container mx-auto p-4 md:p-8">
 
