--- a/index.html
+++ b/index.html
@@ -8,8 +8,261 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
     body {
-      font-family: 'Inter', sans-serif;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 50%, #f093fb 100%);
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 20px;
+      position: relative;
+      overflow-x: hidden;
+    }
+
+    body::before {
+      content: '';
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle at 20% 50%, rgba(102, 126, 234, 0.15) 0%, transparent 50%),
+        radial-gradient(circle at 80% 80%, rgba(240, 147, 251, 0.15) 0%, transparent 50%);
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    body::after {
+      content: '';
+      position: fixed;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><circle cx="50" cy="50" r="40" fill="none" stroke="rgba(255,255,255,0.03)" stroke-width="0.5"/></svg>');
+      animation: drift 20s linear infinite;
+      pointer-events: none;
+      z-index: 0;
+    }
+
+    @keyframes drift {
+      0% {
+        transform: translate(0, 0);
+      }
+
+      100% {
+        transform: translate(50px, 50px);
+      }
+    }
+
+    .bg-white {
+      background: linear-gradient(135deg, rgba(255, 255, 255, 0.97) 0%, rgba(255, 255, 255, 0.93) 100%) !important;
+      backdrop-filter: blur(20px);
+      border: 1px solid rgba(255, 255, 255, 0.3);
+      box-shadow: 0 20px 60px rgba(0, 0, 0, 0.2),
+        inset 0 1px 0 rgba(255, 255, 255, 0.6);
+      position: relative;
+      z-index: 1;
+      animation: slideUp 0.8s cubic-bezier(0.34, 1.56, 0.64, 1);
+    }
+
+    @keyframes slideUp {
+      from {
+        opacity: 0;
+        transform: translateY(40px) scale(0.95);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0) scale(1);
+      }
+    }
+
+    h1:first-of-type {
+      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      font-weight: 800;
+      font-size: 3rem;
+      letter-spacing: -1px;
+      animation: titleGlow 0.8s ease-out;
+    }
+
+    @keyframes titleGlow {
+      from {
+        opacity: 0;
+        transform: translateY(-20px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    .text-gray-600 {
+      color: #6b7280;
+      font-weight: 500;
+      letter-spacing: 0.3px;
+    }
+
+    h1:not(:first-of-type) {
+      background: linear-gradient(135deg, #4f46e5 0%, #7c3aed 100%);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      background-clip: text;
+      font-weight: 700;
+      letter-spacing: -0.5px;
+      position: relative;
+      margin-top: 2rem;
+      margin-bottom: 1.5rem;
+    }
+
+    a {
+      text-decoration: none;
+      color: inherit;
+      position: relative;
+      overflow: hidden;
+      border-radius: 12px;
+      font-weight: 600;
+      text-transform: uppercase;
+      letter-spacing: 0.5px;
+      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.15);
+      animation: linkFloat 0.6s ease-out backwards;
+    }
+
+    .grid a:nth-child(1) {
+      animation-delay: 0.1s;
+    }
+
+    .grid a:nth-child(2) {
+      animation-delay: 0.2s;
+    }
+
+    .grid a:nth-child(3) {
+      animation-delay: 0.3s;
+    }
+
+    .grid a:nth-child(4) {
+      animation-delay: 0.4s;
+    }
+
+    .grid a:nth-child(5) {
+      animation-delay: 0.5s;
+    }
+
+    .grid a:nth-child(6) {
+      animation-delay: 0.6s;
+    }
+
+    .mt-5 a:nth-child(1) {
+      animation-delay: 0.7s;
+    }
+
+    .mt-5 a:nth-child(2) {
+      animation-delay: 0.8s;
+    }
+
+    .mt-5 a:nth-child(3) {
+      animation-delay: 0.9s;
+    }
+
+    @keyframes linkFloat {
+      from {
+        opacity: 0;
+        transform: translateY(20px);
+      }
+
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    a::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: rgba(255, 255, 255, 0.2);
+      transition: left 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+      z-index: -1;
+    }
+
+    a:hover::before {
+      left: 100%;
+    }
+
+    a:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 15px 40px rgba(0, 0, 0, 0.25);
+    }
+
+    a:active {
+      transform: translateY(-2px);
+    }
+
+    .bg-blue-600 {
+      background: linear-gradient(135deg, #3b82f6 0%, #2563eb 100%) !important;
+      color: white;
+    }
+
+    .bg-blue-600:hover {
+      background: linear-gradient(135deg, #2563eb 0%, #1d4ed8 100%) !important;
+    }
+
+    .bg-teal-600 {
+      background: linear-gradient(135deg, #14b8a6 0%, #0d9488 100%) !important;
+      color: white;
+    }
+
+    .bg-teal-600:hover {
+      background: linear-gradient(135deg, #0d9488 0%, #0f766e 100%) !important;
+    }
+
+    .bg-green-600 {
+      background: linear-gradient(135deg, #22c55e 0%, #16a34a 100%) !important;
+      color: white;
+    }
+
+    .bg-green-600:hover {
+      background: linear-gradient(135deg, #16a34a 0%, #15803d 100%) !important;
+    }
+
+    .bg-purple-600 {
+      background: linear-gradient(135deg, #a78bfa 0%, #8b5cf6 100%) !important;
+      color: white;
+    }
+
+    .bg-purple-600:hover {
+      background: linear-gradient(135deg, #8b5cf6 0%, #7c3aed 100%) !important;
+    }
+
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 1.25rem;
+    }
+
+    @media (max-width: 640px) {
+      h1:first-of-type {
+        font-size: 2rem;
+      }
+
+      .grid {
+        gap: 1rem;
+      }
     }
   </style>
 </head>
@@ -21,24 +274,24 @@
     <h1 class="text-4xl font-bold text-gray-800 mb-4">Attendance Tracker</h1>
     <p class="text-gray-600 mb-10 text-lg">Please select a section to begin.</p>
     <h1 class="text-2xl font-bold text-gray-800 mb-4">B.Tech</h1>
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-5">
+    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5">
       <a href="attendance.html?section=A"
         class="px-6 py-4 text-lg font-semibold text-white bg-blue-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-blue-700 hover:-translate-y-1">
         CSE A
       </a>
 
+      <a href="attendance.html?section=A2"
+        class="px-6 py-4 text-lg font-semibold text-white bg-blue-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-blue-700 hover:-translate-y-1">
+        CSE A 2
+      </a>
+
       <a href="attendance.html?section=B"
-        class="px-6 py-4 text-lg font-semibold text-white bg-teal-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-teal-700 hover:-translate-y-1">
+        class="px-6 py-4 text-lg font-semibold text-white bg-blue-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-blue-700 hover:-translate-y-1">
         CSE B
       </a>
 
-      <a href="attendance.html?section=CE"
-        class="px-6 py-4 text-lg font-semibold text-white bg-green-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-green-700 hover:-translate-y-1">
-        CE
-      </a>
-
       <a href="attendance.html?section=AiMlBt"
-        class="px-6 py-4 text-lg font-semibold text-white bg-blue-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-blue-700 hover:-translate-y-1">
+        class="px-6 py-4 text-lg font-semibold text-white bg-purple-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-purple-700 hover:-translate-y-1">
         AIML
       </a>
 
@@ -46,21 +299,29 @@
         class="px-6 py-4 text-lg font-semibold text-white bg-green-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-green-700 hover:-translate-y-1">
         AI&R
       </a>
-      <!-- ADD NEW CLASS HERE. href="attendance.html?section={Same as in data.js}"-->
+
+      <a href="attendance.html?section=CE"
+        class="px-6 py-4 text-lg font-semibold text-white bg-teal-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-teal-700 hover:-translate-y-1">
+        CE
+      </a>
     </div>
-    <h1 class="text-2xl font-bold text-gray-800 mb-4">M.Tech(FYIP)</h1>
-    <div class="mt-5 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-5">
-      <a href="attendance.html?section=AiRMt"
+    <h1 class="text-2xl font-bold text-gray-800 mb-4">M.Tech</h1>
+    <div class="mt-5 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-5">
+      <a href="attendance.html?section=AiMlMt"
         class="px-6 py-4 text-lg font-semibold text-white bg-blue-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-blue-700 hover:-translate-y-1">
+        CSE
+      </a>
+      <a href="attendance.html?section=AiRMt"
+        class="px-6 py-4 text-lg font-semibold text-white bg-green-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-green-700 hover:-translate-y-1">
         AI&R
       </a>
-      <a href="attendance.html?section=AiMlMt"
-        class="px-6 py-4 text-lg font-semibold text-white bg-teal-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-teal-700 hover:-translate-y-1">
-        CSE
+      <a href="attendance.html?section=GNM"
+        class="px-6 py-4 text-lg font-semibold text-white bg-purple-600 rounded-lg shadow-md transition-all duration-300 ease-in-out hover:bg-purple-700 hover:-translate-y-1">
+        GNM
       </a>
     </div>
   </div>
 
 </body>
 
-</html> 
+</html>
